target/classes/META-INF/fabric8/openshift/product-catalog-lab3-deploymentconfig.yml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    fabric8.io/iconUrl: img/icons/spring-boot.svg
    fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=product-catalog-lab3&var-version=1.0.0
  labels:
    app: product-catalog-lab3
    provider: fabric8
    version: 1.0.0
    group: com.redhat.coolstore
  name: product-catalog-lab3
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    app: product-catalog-lab3
    provider: fabric8
    group: com.redhat.coolstore
  strategy:
    rollingParams:
      timeoutSeconds: 3600
    type: Rolling
  template:
    metadata:
      annotations:
        fabric8.io/iconUrl: img/icons/spring-boot.svg
        fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=product-catalog-lab3&var-version=1.0.0
      labels:
        app: product-catalog-lab3
        provider: fabric8
        version: 1.0.0
        group: com.redhat.coolstore
    spec:
      containers:
      - env:
        - name: AMQP_SERVICE_NAME
          valueFrom:
            configMapKeyRef:
              key: service.host2
              name: kcb-camel-amq-config
        - name: AMQP_SERVICE_PORT
          valueFrom:
            configMapKeyRef:
              key: service.port.amqp2
              name: kcb-camel-amq-config
        - name: AMQP_PARAMETERS
          value: transport.trustAll=true&transport.verifyHost=false&amqp.idleTimeout=120000
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: coolstore/product-catalog-lab3:1.0.0
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 180
        name: spring-boot
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
        resources:
          limits:
            cpu: "1.0"
            memory: 256Mi
          requests:
            cpu: "0.2"
            memory: 256Mi
        securityContext:
          privileged: false
  triggers:
  - type: ConfigChange
