target/classes/META-INF/fabric8/openshift/product-catalog-lab3-route.yml
---
apiVersion: v1
kind: Route
metadata:
  labels:
    app: product-catalog-lab3
    provider: fabric8
    version: 1.0.0
    group: com.redhat.coolstore
  name: product-catalog-lab3
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: product-catalog-lab3
